data/all_generated_tests/raw_wast_tests/nop_StackCorruption_155.wast
;; Test 6: Place `nop` in a function that utilizes the stack for complex arithmetic operations followed by a return, ensuring the stack's final state and return value is consistent and uncorrupted.

(assert_invalid
  (module (func (result i32) (i32.const 10) (i32.const 20) (i32.add) (nop) (return)))
  "type mismatch"
)